--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 <body>
     <h1>GATO</h1>
 
-    <div id="puntuacion">
+    <div id="puntuacion" class="puntuacion">
         <div id="puntuacionJugador">
             <h3>puntuacion del Jugador</h3>
-            <p>0</p>
+            <p id="puntuacion1">0</p>
         </div>
         <div id="puntuacionJugador">
             <h3>puntuacion del Jugador</h3>
-            <p>0</p>
+            <p id="puntuacion2">0</p>
         </div>
     </div>
     <div class="botones">
-        <button onclick="machine()">1 player</button>
-        <button onclick="human()">HUMAN VS HUMAN</button>
+        <button onclick="machine()">1 Player</button>
+        <button onclick="human()">2 Players</button>
     </div>
 <div class="cuadroCNT">
     <div class="cuadro"></div>
@@ -35,14 +35,8 @@
     <div class="cuadro"></div>
     
 </div>
-    <p id="ganador"></p>
-<div class="acciones">
-    <button id="reiniciar">reiniciar</button>
-    <select id="primerJugador">
-        <option value="0"> Jugador</option>
-        <option value="x">Computadora</option>
-    </select>
-</div>
+ 
+<div ><button onclick="reiniciar()">reiniciar</button></div>
 
 <div id="Pop" class="popUp">
     <div class="insideBox">
