--- a/index.html
+++ b/index.html
@@ -11,17 +11,19 @@
 
     <div id="puntuacion" class="puntuacion">
         <div id="puntuacionJugador">
-            <h3>puntuacion del Jugador</h3>
-            <p id="puntuacion1">0</p>
+            <h3>Jugador 1</h3>
+            <p id="puntuacion1"></p>
         </div>
         <div id="puntuacionJugador">
-            <h3>puntuacion del Jugador</h3>
-            <p id="puntuacion2">0</p>
+            <h3>Jugador 2</h3>
+            <p id="puntuacion2"></p>
         </div>
     </div>
     <div class="botones">
         <button onclick="machine()">1 Player</button>
         <button onclick="human()">2 Players</button>
+        <button onclick="restartScore()">Restar Score</button>
+
     </div>
 <div class="cuadroCNT">
     <div class="cuadro"></div>
@@ -36,7 +38,7 @@
     
 </div>
  
-<div ><button onclick="reiniciar()">reiniciar</button></div>
+<div class="cntReiniciar" ><button class="reinicia" onclick="reiniciar()">reiniciar</button></div>
 
 <div id="Pop" class="popUp">
     <div class="insideBox">
