--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="botones">
         <button onclick="machine()">1 Player</button>
         <button onclick="human()">2 Players</button>
-        <button onclick="restartScore()">Restar Score</button>
+        <button onclick="restartScore()">Restart Score</button>
 
     </div>
 <div class="cuadroCNT">
